Add a new endpoint type AzureArcNetwork and its implementation

--- a/tools/TestFx/TestFx.csproj
+++ b/tools/TestFx/TestFx.csproj
@@ -10,6 +10,10 @@
     <AssemblyName>Microsoft.Azure.PowerShell.TestFx</AssemblyName>
     <RootNamespace>$(LegacyAssemblyPrefix)TestFx</RootNamespace>
   </PropertyGroup>
+  
+  <PropertyGroup>
+    <NoWarn>NU1903</NoWarn>
+  </PropertyGroup>
 
   <ItemGroup>
     <Content Include="Assert.ps1">
