--- a/src/Accounts/Authentication/Authentication.csproj
+++ b/src/Accounts/Authentication/Authentication.csproj
@@ -11,9 +11,12 @@
     <RootNamespace>$(LegacyAssemblyPrefix)Common.Authentication</RootNamespace>
   </PropertyGroup>
 
+<PropertyGroup>
+	<NoWarn>NU1903</NoWarn>
+</PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Azure.Identity" Version="1.6.1" />
-    <PackageReference Include="Azure.Identity.BrokeredAuthentication" Version="1.0.0-beta.3" />
+	  <PackageReference Include="Azure.Identity" Version="1.6.1" />
+	  <PackageReference Include="Azure.Identity.BrokeredAuthentication" Version="1.0.0-beta.3" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.49.1" />
     <PackageReference Include="Microsoft.Identity.Client.Extensions.Msal" Version="2.23.0" />
   </ItemGroup>
