--- a/src/Accounts/Authentication/Authentication.csproj
+++ b/src/Accounts/Authentication/Authentication.csproj
@@ -12,12 +12,14 @@
   </PropertyGroup>
 
 <PropertyGroup>
+	<NoWarn>NU1902</NoWarn>
+	<NoWarn>NU1901</NoWarn>
 	<NoWarn>NU1903</NoWarn>
 </PropertyGroup>
   <ItemGroup>
-	  <PackageReference Include="Azure.Identity" Version="1.6.1" />
+	  <PackageReference Include="Azure.Identity" Version="1.6.1" NoWarn="NU1902" />
 	  <PackageReference Include="Azure.Identity.BrokeredAuthentication" Version="1.0.0-beta.3" />
-    <PackageReference Include="Microsoft.Identity.Client" Version="4.49.1" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.49.1" NoWarn="NU1901" />
     <PackageReference Include="Microsoft.Identity.Client.Extensions.Msal" Version="2.23.0" />
   </ItemGroup>
 
