--- a/src/Network/Network/Network.csproj
+++ b/src/Network/Network/Network.csproj
@@ -11,6 +11,12 @@
     <ApplicationIcon />
     <Win32Resource />
   </PropertyGroup>
+  
+  <PropertyGroup>
+    <NoWarn>NU1902</NoWarn>
+    <NoWarn>NU1901</NoWarn>
+    <NoWarn>NU1903</NoWarn>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
